ajustando o novo modelo de recebimentos

--- a/src/app/demo/pages/uikit/button/buttondemo.component.html
+++ b/src/app/demo/pages/uikit/button/buttondemo.component.html
@@ -52,7 +52,7 @@
 		<div class="card">
 			<h5>Button Set</h5>
 			<span class="p-buttonset">
-				<button pButton pRipple label="Save" icon="pi pi-check"></button>
+				<button pButton pRipple label="Salvar" icon="pi pi-check"></button>
 				<button pButton pRipple label="Editar" icon="pi pi-trash"></button>
 			</span>
 		</div>
@@ -60,11 +60,11 @@
 		<div class="card">
 			<h5>SplitButton</h5>
 			<div class="flex flex-wrap gap-2">
-				<p-splitButton label="Save" icon="pi pi-plus" [model]="items" styleClass="p-button-info"></p-splitButton>
-				<p-splitButton label="Save" icon="pi pi-plus" [model]="items" styleClass="p-button-success"></p-splitButton>
-				<p-splitButton label="Save" icon="pi pi-plus" [model]="items" styleClass="p-button-warning"></p-splitButton>
-				<p-splitButton label="Save" icon="pi pi-plus" [model]="items" styleClass="p-button-help"></p-splitButton>
-				<p-splitButton label="Save" icon="pi pi-plus" [model]="items" styleClass="p-button-danger"></p-splitButton>
+				<p-splitButton label="Salvar" icon="pi pi-plus" [model]="items" styleClass="p-button-info"></p-splitButton>
+				<p-splitButton label="Salvar" icon="pi pi-plus" [model]="items" styleClass="p-button-success"></p-splitButton>
+				<p-splitButton label="Salvar" icon="pi pi-plus" [model]="items" styleClass="p-button-warning"></p-splitButton>
+				<p-splitButton label="Salvar" icon="pi pi-plus" [model]="items" styleClass="p-button-help"></p-splitButton>
+				<p-splitButton label="Salvar" icon="pi pi-plus" [model]="items" styleClass="p-button-danger"></p-splitButton>
 			</div>
 		</div>
 		<div class="card">
