--- a/src/app/demo/pages/uikit/cadastrousuario/cadastrousuario.component.html
+++ b/src/app/demo/pages/uikit/cadastrousuario/cadastrousuario.component.html
@@ -116,9 +116,9 @@
             </ng-template>
 
             <ng-template pTemplate="footer">
-                <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-text"
+                <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text"
                     (click)="hideDialog()"></button>
-                <button pButton pRipple label="Save" icon="pi pi-check" class="p-button-text"
+                <button pButton pRipple label="Salvar" icon="pi pi-check" class="p-button-text"
                     (click)="saveProduct()"></button>
             </ng-template>
         </p-dialog>
@@ -152,7 +152,7 @@
         <p-dialog [(visible)]="deleteProductsDialog" header="Confirm" [modal]="true" [style]="{width:'450px'}">
             <div class="flex align-items-center justify-content-center">
                 <i class="pi pi-exclamation-triangle mr-3" style="font-size: 2rem"></i>
-                <span>Tem certeza de que deseja excluir selected products?</span>
+                <span>Tem certeza de que deseja excluir produtos selecionados?</span>
             </div>
             <ng-template pTemplate="footer">
                 <button pButton pRipple icon="pi pi-times" class="p-button-text" label="Não"
