--- a/src/app/demo/components/header-screen/header-screen.component.html
+++ b/src/app/demo/components/header-screen/header-screen.component.html
@@ -1,5 +1,5 @@
 <div class="grid justify-content-between align-items-center mb-3 p-3">
     <h3 class="mb-0">{{ title }}</h3>
-    <button pButton pRipple [label]="buttonLabel" icon="pi pi-plus" (click)="showModal()"></button>
+    <button *ngIf="showButton" pButton pRipple [label]="buttonLabel" icon="pi pi-plus" (click)="showModal()"></button>
 </div>
 
