--- a/src/app/layout/app.footer.component.html
+++ b/src/app/layout/app.footer.component.html
@@ -1,5 +1,5 @@
 <div class="layout-footer">
     <img src="assets/layout/images/{{layoutService.config().colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg" alt="Logo" height="20" class="mr-2"/>
-    Distribuidora Hortifruti
+    Distribuidora Belo Horizonte
     <span class="ml-2"></span>
 </div>
